completed slider on the component TheoryCourse and fix bug (z-index)

--- a/src/components/mainComponent/mainPage/burgerMenu/BurgerMenu.module.css
+++ b/src/components/mainComponent/mainPage/burgerMenu/BurgerMenu.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     position: absolute;
     background: rgba(0, 0, 0, 0.7);
+    z-index: 50;
 }
 .mvpIcon {
     width: 22.18vw;
